# ferriskey-performance-tester

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: perf-nightly.yml  perf-smoke.yml
data/: clients.json  realm.json  users.csv
k6/lib/: auth.js  config.js  data.js
k6/scenarios/: jwks.js  mixed_workload.js  token_client_credentials.js  token_password.js  userinfo.js
scripts/: cleanup_test_data.py  cleanup_test_data_keycloak.py  seed_test_data.py  seed_test_data_keycloak.py
scripts/lib/: __init__.py  base_provider.py  config.py  console.py  ferriskey_provider.py  keycloak_provider.py
